--- a/profiles.yml
+++ b/profiles.yml
@@ -3,11 +3,11 @@ dw_dbt_preco_commodities:
     outputs:
         dev:
             type: postgres
-            host: "{{ env_var('DB_HOST') }}"
-            port: "{{ env_var('DB_PORT') | int }}"
-            dbname: "{{ env_var('DB_NAME') }}"
+            host: "{{ env_var('POSTGRES_HOST') }}"
+            port: "{{ env_var('POSTGRES_PORT') | int }}"
+            dbname: "{{ env_var('POSTGRES_DB') }}"
             schema: "{{ env_var('DB_SCHEMA') }}"
-            user: "{{ env_var('DB_USER') }}"
-            pass: "{{ env_var('DB_PASS') }}"
+            user: "{{ env_var('POSTGRES_USER') }}"
+            pass: "{{ env_var('POSTGRES_PASSWORD') }}"
             threads: "{{ env_var('DB_THREADS') | int }}"
             keepalives_idle: 0
