feat: staging concluida

--- a/dw_dbt_preco_commodities/dbt_project.yml
+++ b/dw_dbt_preco_commodities/dbt_project.yml
@@ -30,3 +30,4 @@ clean-targets: # directories to be removed by `dbt clean`
 models:
     dw_dbt_preco_commodities:
         # Config indicated by + and applies to all files under models/example/
+        +materialized: view
